Removed for Loops swapping GetAll
Add(push)
IIFE for local op

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple JS App</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" href="/img/pokeball.png" type="image/x-icon">
+    <link rel="icon" href="../img/pokeball.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,5 +14,8 @@
 <body>
     <script src="./js/scripts.js"></script>
     <br>
+    <div class="pokemon">
+
+    </div>
 </body>
 </html>
