--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple JS App</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>Pokedex</title>
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="../img/pokeball.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,10 +12,19 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
-    <script src="./js/scripts.js"></script>
-    <br>
-    <div class="pokemon">
+  <h1><span class="title">Pokedex</span></h1>
+  <h2><span class="catch-em">Gotta catch 'em all!</span></h2>
+<div id="pokemon-modal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2 class="pokemon-name"></h2>
+    <p class="pokemon-height"></p>
+    <p class="pokemon-type"></p>
+  </div>
+</div>
 
-    </div>
+<ul class="pokemon-list"></ul>
+
+  <script src="../js/scripts.js"></script>
 </body>
 </html>
