--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="../img/pokeball.png" type="image/x-icon">
+    <link rel="icon" href="/img/pokeball.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +13,9 @@
 </head>
 <body>
   <h1><span class="title">Pokedex</span></h1>
+  <span class="catch-em">Gotta catch 'em all!</span>
 <ul class="pokemon-list"></ul>
 
-  <script src="../js/scripts.js"></script>
+  <script src="/js/scripts.js"></script>
 </body>
 </html>
