--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 <ul class="pokemon-list"></ul>
 
   <script src="/js/scripts.js"></script>
+  <script src="/js/promise-pollyfill.js"></script>
+  <script src="/js/fetch-pollyfill.js"></script>
 </body>
 </html>
