Directory change JS>

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <span class="catch-em">Gotta catch 'em all!</span>
 <ul class="pokemon-list"></ul>
 
-  <script src="/js/scripts.js"></script>
-  <script src="/js/promise-pollyfill.js"></script>
-  <script src="/js/fetch-pollyfill.js"></script>
+  <script src="js/scripts.js"></script>
+  <script src="js/promise-pollyfill.js"></script>
+  <script src="js/fetch-pollyfill.js"></script>
 </body>
 </html>
