--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <h1><span class="title">Pokedex</span></h1>
   <span class="catch-em">Gotta catch 'em all!</span>
+  <div id="modal-container"></div>
 <ul class="pokemon-list"></ul>
 
   <script src="js/scripts.js"></script>
