--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="/img/pokeball.png" type="image/x-icon">
+    <link rel="icon" href="img/pokeball.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1><span class="title">Pokedex</span></h1>
-  <span class="catch-em">Gotta catch 'em all!</span>
+  <header>
+    <div class="header-div">
+      <span> <img src="img/pika.png" class="pika"> </span>
+      <img src="img/api.png" alt="PokeAPI Title" class="pokeapi">
+      <span> <img src="img/squirtle.png" class="squirtle"> </span>
+    </div>
+    </header>
+    <br>
   <div id="modal-container"></div>
 <ul class="pokemon-list"></ul>
 
