--- a/index.html
+++ b/index.html
@@ -4,27 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex via API</title>
+<!-- Bootstrap CSS -->
+       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/pokeball.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
+<!-- Bootstrap Navbar -->
+<nav class="navbar navbar-expand-md navbar-dark" style="background-color: rgb(94, 87, 87)">
+  <a class="navbar-brand" href="#">
+    <img src="img/pokeball.png" alt="Pokeball for branding logo" width="30" height="30" class="d-inline-block align-top">
+  Pokedex
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+  </div>
+  </nav>
   <header>
     <div class="header-div">
       <span> <img src="img/pika.png" class="pika"> </span>
       <img src="img/api.png" alt="PokeAPI Title" class="pokeapi">
       <span> <img src="img/squirtle.png" class="squirtle"> </span>
     </div>
-    </header>
-    <br>
-  <div id="modal-container"></div>
-<ul class="pokemon-list"></ul>
-
-  <script src="js/scripts.js"></script>
-  <script src="js/promise-pollyfill.js"></script>
-  <script src="js/fetch-pollyfill.js"></script>
+  </header>
+<!-- Main Content for Modal -->
+  <main class="container mt-4"> <!--MT4 centers-->
+    <div class="row justify-content-center">
+      <ul class="pokemon-list list-group round-button">
+      </ul> 
+    </div>
+  </main>
+  <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content text-center">
+        <div class="modal-header">
+          <h5 class="modal-title" id="pokemonModalLabel">..</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close Out">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>      
+        <div class="modal-body text-center">
+          <img src="" alt="Pokemon Image" class="pokemon-image">
+            <div class="modal-details">
+              <p class="pokemon-height"></p>
+              <p class="pokemon-weight"></p>
+              <p class="pokemon-types"></p>
+            </div>
+        <div class="modal-footer">
+      <!--close button can go here, however I do not like visual of button so will remove-->
+        <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Bootstrap JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
+<!---My JScripts-->
+<script src="js/scripts.js"></script>
 </body>
 </html>
