Remove unneeded coding
CSS code removal, update to header pika sizing

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <!-- Bootstrap Navbar -->
-<nav class="navbar navbar-expand-md navbar-dark" style="background-color: rgb(94, 87, 87)">
+<nav class="navbar navbar-expand-md navbar-dark w-100" style="background-color: rgb(94, 87, 87)">
   <a class="navbar-brand" href="#">
     <img src="img/pokeball.png" alt="Pokeball for branding logo" width="30" height="30" class="d-inline-block align-top">
   Pokedex
@@ -33,9 +33,9 @@
   </nav>
   <header>
     <div class="header-div">
-      <span> <img src="img/pika.png" class="pika"> </span>
+      <span> <img src="img/pika.png" class="pika" alt="pikachu image that wiggles on hover"> </span>
       <img src="img/api.png" alt="PokeAPI Title" class="pokeapi">
-      <span> <img src="img/squirtle.png" class="squirtle"> </span>
+      <span> <img src="img/squirtle.png" class="squirtle" alt="squirtle image that wiggles on hover"> </span>
     </div>
   </header>
 <!-- Main Content for Modal -->
@@ -55,7 +55,7 @@
           </button>
         </div>      
         <div class="modal-body text-center">
-          <img src="" alt="Pokemon Image" class="pokemon-image">
+          <img src="img/pokemon-placeholder.jpeg" alt="Pokemon Image" class="pokemon-image">
             <div class="modal-details">
               <p class="pokemon-height"></p>
               <p class="pokemon-weight"></p>
